compilateurDeca/src/test/deca/syntax/valid/sans_objet/comparison.deca

// Description:
//
// Teste une comparison simple
// Historique:09/01/2026
{
    boolean b;
    b = 4 > 2; 
}

