compilateurDeca/src/test/deca/syntax/invalid/sans_objet/block.deca
//Description
//Teste les blocs imbriqués
//
// Historique:
//    cree le 10/01/2026
{
    {
        int x;
        x=4;
    }
}